[package]
name = "sylas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.dev]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
obfstr = "0.4.3"
pelite = "0.10.0"
hyper-native-tls = "0.3"
hyper = "0.10"
base64 = "0.21.2"

[dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Security",
]
